feat: muita coisa
