# src/swagger.json
@@ -14,6 +14,9 @@
                 "tags": ["category"],
                 "summary": "Create a new category",
                 "description": "Create a new category",
+                "security": [
+                    { "bearerAuth": [ ] }
+                ],
                 "requestBody": {
                     "content": {
                         "applicatication/json": {
@@ -73,6 +76,14 @@
                 }
             }
         }
-
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer",
+                "bearerFormat": "JWT"
+            }
+        }
     }
 }
